--- a/css/main.scss
+++ b/css/main.scss
@@ -423,7 +423,7 @@ footer {
       content: ' ';
       background: $grey;
       width: 100%;
-      height: 350px;
+      height: 320px;
       margin-top: 60px;
       padding: 0;
       z-index: -100;
@@ -490,6 +490,9 @@ footer {
       flex-wrap: wrap;
       justify-content: space-between;
       align-items: flex-start;
+      .heading {
+        width: 260px;
+      }
       article {
         padding-top: 45px;
         width: 46%;
@@ -590,6 +593,7 @@ footer {
   }
   /* Footer */
   footer {
+    padding-top: 75px;
     .footer-content {
       article.footer-logo {
         width: 30%;
@@ -604,6 +608,11 @@ footer {
     .footer-social-media {
       flex-flow: row-reverse nowrap;
       justify-content: space-between;
+      &::before {
+        width: 100%;
+        height: 225px;
+        margin-left: 64px;
+      }
       .social-icons {
         display: flex;
         justify-content: space-between;
@@ -619,7 +628,7 @@ footer {
       text-align: left;
     }
     .footer-bg-element {
-      height: 90px;
+      height: 120px;
     }
   }
 }
@@ -654,9 +663,6 @@ footer {
   /* Hero */
   #hero {
     .hero-content {
-      .heading {
-        width: 35%;
-      }
       article {
         width: 45%;
       }
