--- a/css/main.scss
+++ b/css/main.scss
@@ -96,20 +96,21 @@ textarea {
 
 /* Fonts */
 $bold: 700;
-$main-font: 'Source Sans Pro', sans-serif;
+$main-font: "Source Sans Pro", sans-serif;
 $regular: 400;
 $semi-bold: 600;
 /* Colors */
-$facebook: #35589D;
-$grey: #F4F4F4;
-$light-blue: #EFF8FF;
-$light-peach: #FFF5F5;
-$linkedin: #337BB1;
-$primary-blue: #0688FA;
-$soft-blue: #96CBFA;
-$sw-blue: #329DFA;
-$sw-yellow: #FFCC33;
-$twitter: #5DA8DC;
+$duck-egg-grey: #537089;
+$facebook: #35589d;
+$grey: #f4f4f4;
+$light-blue: #eff8ff;
+$light-peach: #fff5f5;
+$linkedin: #337bb1;
+$primary-blue: #0688fa;
+$soft-blue: #96cbfa;
+$sw-blue: #329dfa;
+$sw-yellow: #ffcc33;
+$twitter: #5da8dc;
 /* Style Variables */
 $radius: 5px;
 $shadow: 0px 10px 40px rgba(0, 0, 0, 0.08);
@@ -167,6 +168,9 @@ header {
   .content-wrapper {
     margin-top: 75px;
   }
+  p {
+    color: $duck-egg-grey;
+  }
   .culture-content {
     display: flex;
     flex-direction: column;
@@ -194,12 +198,12 @@ header {
     }
     a:hover {
       color: $primary-blue !important;
-      transition: 2s color;
+      transition: 1s color, 2s background;
     }
     &:hover {
       background: white;
       border: 1px solid $primary-blue;
-      transition: 2s background;
+      transition: 1s color, 2s background;
     }
   }
 }
@@ -257,7 +261,7 @@ header {
   &::before {
     background: url(../img/offices-bg-desktop.png);
     background-size: cover;
-    content: ' ';
+    content: " ";
     position: absolute;
     width: 100%;
     height: 1000px;
@@ -276,7 +280,7 @@ header {
       border-radius: $radius;
       box-shadow: $shadow;
       height: 200px;
-      line-height: .5rem;
+      line-height: 0.5rem;
       margin: 20px 0px;
       padding-top: 20px;
       width: 100%;
@@ -320,8 +324,8 @@ header {
     color: white;
   }
   &::before {
-    content: ' ';
-    background: url('../img/demo-bg.png');
+    content: " ";
+    background: url("../img/demo-bg.png");
     background-size: cover;
     width: 100%;
     height: 120px;
@@ -383,8 +387,8 @@ footer {
     align-items: flex-start;
     flex-wrap: wrap;
     width: 97%;
-    font-size: .80rem;
-    line-height: 1.20rem;
+    font-size: 0.8rem;
+    line-height: 1.2rem;
     padding-bottom: 30px;
     article.footer-logo {
       width: 100%;
@@ -420,7 +424,7 @@ footer {
     text-align: center;
     &::before {
       position: absolute;
-      content: ' ';
+      content: " ";
       background: $grey;
       width: 100%;
       height: 320px;
@@ -463,7 +467,7 @@ footer {
     }
   }
   .copyright {
-    font-size: .90rem;
+    font-size: 0.9rem;
     padding-bottom: 30px;
     text-align: center;
   }
@@ -542,6 +546,7 @@ footer {
   #offices {
     margin: 100px 0px;
     h1 {
+      padding-top: 40px;
       padding-bottom: 60px;
     }
     .office-locations {
@@ -643,6 +648,7 @@ footer {
     display: flex;
     justify-content: space-between;
     flex-flow: row nowrap;
+    padding-top: 35px;
     padding-bottom: 95px;
     nav {
       display: inline-block;
@@ -654,48 +660,117 @@ footer {
           margin-left: 55px;
         }
       }
+      a:link,
+      a:visited {
+        color: black;
+        font-size: 1.125rem;
+        font-weight: $bold;
+      }
+      a:hover {
+        color: $sw-blue;
+        transition: 1s color;
+      }
       .nav-buttons {
         display: inline-block;
         margin-left: 150px;
+        li {
+          margin-left: 15px;
+        }
+      }
+      .outline-button {
+        background: none;
+        border: 1px solid $primary-blue;
+        border-radius: $radius;
+        padding: 15px 25px;
+        &:hover {
+          color: white;
+          background: $primary-blue;
+          border: 1px solid $primary-blue;
+          transition: 2s background, 1s color;
+        }
+      }
+      a.outline-button {
+        color: $primary-blue;
+      }
+      .header-button {
+        background: $primary-blue;
+        border-radius: $radius;
+        border: 1px solid $primary-blue;
+        padding: 15px 30px;
+        text-align: center;
+        width: 100%;
+        &:hover {
+          background: none;
+          border: 1px solid $primary-blue;
+          transition: 2s background, 1s color;
+        }
+      }
+      a.header-button {
+        color: white;
+        &:hover {
+          color: $primary-blue;
+        }
       }
     }
   }
   /* Hero */
   #hero {
     .hero-content {
+      .heading {
+        padding: 0;
+        width: 40%;
+        h1 {
+          font-size: 3.625rem;
+          line-height: 3.875rem;
+        }
+      }
       article {
+        margin-top: 0;
         width: 45%;
       }
     }
   }
+  /* Our Culture */
+  #our-culture {
+    padding-top: 100px;
+  }
   /* Timeline */
   #company-history {
-    padding-top: 50px;
     .timeline {
       margin: 0 auto;
       width: 60%;
     }
   }
- /* Offices */
- #offices {
-   .office-locations {
-    justify-content: space-evenly;
-    article {
-       width: 37%;
-     }
-   }
- }
- /* Investors */
- #investors {
-   .investors-content {
-     justify-content: space-evenly;
-     padding-top: 100px;
-     article {
-       margin-bottom: 70px;
-       width: 37%;
-     }
-   }
- }
+  /* Offices */
+  #offices {
+    .office-locations {
+      justify-content: space-evenly;
+      article {
+        width: 37%;
+      }
+    }
+  }
+  /* Investors */
+  #investors {
+    .investors-content {
+      justify-content: space-evenly;
+      padding-top: 100px;
+      article {
+        margin-bottom: 70px;
+        height: 200px;
+        width: 37%;
+      }
+    }
+  }
+  /* Demo */
+  #demo {
+    .white-button {
+      padding: 10px 90px;
+    }
+    .white-outline-button {
+      padding: 10px 90px;
+    }
+  }
   /* Footer */
   footer {
     .footer-content {
@@ -707,6 +782,10 @@ footer {
       }
     }
     .footer-social-media {
+      &::before {
+        height: 270px;
+        margin-left: 117px;
+      }
       .social-icons {
         width: 12%;
       }
